--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "NikeApp",
-    "slug": "NikeApp",
+    "name": "Travel App",
+    "slug": "TravelApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
